# imbolc-ui

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  NEXT_STEPS.md  README.md  REFACTOR1.md  TASKS.md  TASKS_DONE.md  TECHDEETS.md  UNITTESTSIMPROV.md  config.toml  fat_bass.scd  inbox.txt  keybindings.json  keybindings.toml  logo2.txt
imbolc-core/: Cargo.toml
imbolc-core/src/: action.rs  config.rs  lib.rs  vst3_probe.rs
imbolc-core/src/audio/: arpeggiator_tick.rs  audio_thread.rs  commands.rs  drum_tick.rs  handle.rs  mod.rs  osc_client.rs  playback.rs
imbolc-core/src/audio/engine/: automation.rs  backend.rs  mod.rs  node_registry.rs  recording.rs  routing.rs  samples.rs  server.rs  voices.rs  vst.rs
imbolc-core/src/dispatch/: arrangement.rs  audio_feedback.rs  automation.rs  instrument.rs  midi.rs  mixer.rs  mod.rs  piano_roll.rs  sequencer.rs  server.rs  session.rs  vst_param.rs
imbolc-core/src/dispatch/instrument/: crud.rs  effects.rs  eq.rs  filter.rs  mod.rs  playback.rs  sample.rs
imbolc-core/src/state/: arpeggiator.rs  arrangement.rs  automation.rs  clipboard.rs  custom_synthdef.rs  drum_sequencer.rs  grid.rs  instrument.rs  instrument_state.rs  midi_recording.rs  mod.rs  music.rs  param.rs  piano_roll.rs  session.rs  undo.rs  vst_plugin.rs
imbolc-core/src/state/automation/: lane.rs  mod.rs  state.rs  target.rs  tests.rs  types.rs
imbolc-core/src/state/instrument/: effect.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  source_type.rs
imbolc-core/src/state/persistence/: blob.rs  conversion.rs  legacy.rs  load.rs  mod.rs  save.rs  (+2 more)
(+326 files in other folders)
