[package]
name = "imbolc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rosc = "0.10"
midir = "0.9"
regex = "1"
dirs = "5"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
